k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-utility
  labels:
    app.kubernetes.io/name: gateway-utility
